--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.4</version>
                 <configuration>
-                    <mainClass>com.company.App</mainClass>
+                    <mainClass>com.company.ui.App</mainClass>
                 </configuration>
             </plugin>
         </plugins>
